# build

./: .gitignore  .shipbot.yaml  BUILD  BUILD.bazel  Makefile  README.md  WORKSPACE  buffer_byte_source.go  build_context.go  byte_source.go  cloudbuild.yaml  docker_bundle.go  file_byte_source.go  filedata.go  gzip_byte_source.go  info  layer.go  main.go  once_byte_source.go  simple_filedata.go  slice_byte_source.go  task_add_deb.go  task_add_tar.go  task_add_tree.go  task_create_group.go  task_create_user.go  utils.go  xz_byte_source.go
cmd/imagebuilder/: BUILD
cmd/kcb/: BUILD  BUILD.bazel  main.go
examples/memcached/: Makefile
pkg/cmd/: BUILD  BUILD.bazel  copy.go  create.go  create_layer.go  delete.go  delete_layer.go  env.go  factory.go  fetch.go  push.go  root.go  set.go
pkg/docker/: BUILD  BUILD.bazel  auth.go  auth_test.go  registry.go
pkg/imageconfig/: BUILD  BUILD.bazel  config.go
pkg/layers/: BUILD  BUILD.bazel  fs.go  options.go  store.go
