load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kope.io/build/cmd/kcb",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cmd:go_default_library"],
)

go_binary(
    name = "kcb",
    embed = [":go_default_library"],
    importpath = "kope.io/build/cmd/kcb",
    visibility = ["//visibility:public"],
)

genrule(
    name = "kcb-sha1",
    srcs = [":kcb"],
    outs = ["kcb.sha1"],
    cmd = "sha1sum $(SRCS) | cut -d' ' -f1 > $@",
    output_to_bindir = 1,
)
